Fix content overlapping alert

--- a/app/assets/stylesheets/darkswarm/page_alert.css.sass
+++ b/app/assets/stylesheets/darkswarm/page_alert.css.sass
@@ -1,5 +1,4 @@
 @import branding
-@import mixins
 @import animations
 @import "compass/css3/transition"
 
@@ -35,4 +34,4 @@
 
 .off-canvas-wrap .inner-wrap .page-alert.fixed
   top: 0
-  z-index: 0
+  z-index: 1
